fix: BoxPage overflow cutting off background image

--- a/src/components/BoxPage.scss
+++ b/src/components/BoxPage.scss
@@ -3,6 +3,7 @@
 .box-page {
   height: 100%;
   width: 100%;
+  overflow: auto;
 
   display: flex;
   flex-direction: column;
